# ReconX

./: .env.example  CONTRIBUTING.md  README.md  cache.json  pyproject.toml  results.json  setup_reconx.py
.github/workflows/: tests.yml
docs/: plugin_dev_guide.md  quickstart.md  schema_reference.md
plugins/crtsh_lookup/: plugin.py
plugins/dns_basic/: plugin.py
plugins/whois_parser/: plugin.py
reconx/: cli.py  reconx_gui.py
reconx/assets/: style.qss
reconx/core/: cache.py  engine.py  logging.py  plugin_base.py  schema.py  storage.py
scripts/: run_demo.sh
tests/: test_cache.py  test_cli.py  test_crtsh_lookup.py  test_dns_basic.py  test_engine.py  test_storage.py  test_whois_parser.py
